# pwgenx

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/psw_generator/: generator.py
src/psw_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pwgenx/: __main__.py  about.py  generate.py  generator.py
tests/: test_generate.py  test_generator.py
tests/utils/: get_psw.py
