[project]
name = "pwgenx"
version = "0.1.0"
description = "A simple password generator for secure and customizable passwords"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name="Amiri", email="0xamiridev@gmail.com"}
]

license = {file="LICENSE"}

keywords= ["password", "generator","security"]

# runtime dependencies 
dependencies = []

[project.urls]
Repository = "https://github.com/amiri-x/pwgenx.git"



[project.scripts]
pwgenx = "pwgenx.generate:main" # CLI shortcut 



# dev/test dependencies
[project.optional-dependencies]
dev = ["pytest"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

